fix: ajustes de filtro.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /vendor/
+/.idea/commandlinetools/schemas/frameworkDescriptionVersion1.1.4.xsd
+/.idea/commandlinetools/Laravel_01_03_2023_11_35.xml
+/.idea/phpunit.xml
+/.idea/upd8-teste.iml
+/.idea/php.xml
+/.idea
